--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ excludes=
 file.reference.commons-codec-1.16.0.jar=src/java/resources/commons-codec-1.16.0.jar
 file.reference.commons-collections4-4.4.jar=src/java/resources/commons-collections4-4.4.jar
 file.reference.commons-compress-1.25.0.jar=src/java/resources/commons-compress-1.25.0.jar
+file.reference.commons-csv-1.9.0-sources.jar=src/java/resources/commons-csv-1.9.0-sources.jar
+file.reference.commons-csv-1.9.0.jar=src/java/resources/commons-csv-1.9.0.jar
 file.reference.commons-fileupload-1.4.jar=src/java/resources/commons-fileupload-1.4.jar
 file.reference.commons-io-2.15.0.jar=src/java/resources/commons-io-2.15.0.jar
 file.reference.commons-math3-3.6.1.jar=src/java/resources/commons-math3-3.6.1.jar
@@ -76,7 +78,9 @@ javac.classpath=\
     ${file.reference.servlet-api.jar}:\
     ${file.reference.spring-web-5.1.18.RELEASE.jar}:\
     ${file.reference.spring-webmvc-5.1.18.RELEASE.jar}:\
-    ${file.reference.xmlbeans-5.2.0.jar}
+    ${file.reference.xmlbeans-5.2.0.jar}:\
+    ${file.reference.commons-csv-1.9.0-sources.jar}:\
+    ${file.reference.commons-csv-1.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
